--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 html {
- background-color: #f0f0f0    
+  background-color: #f0f0f0;
 }
 
 .app {
@@ -11,21 +11,21 @@ html {
 .app__content {
   display: flex;
   align-items: flex-start;
-  width:100%;
+  width: 100%;
+  padding-top: 10px;
 }
-.heroImage{
-  background-image: url(/assets/advertisement.jpg);
-  height: 400px;
-  background-repeat: no-repeat;
+.heroImage {
+  background-image: url(/assets/heroImage.png);
+  height: 500px;
+  background-repeat: repeat;
   background-size: contain;
   background-position: center;
-  margin: 20px;
 }
-.galleryImg{
+.galleryImg {
   width: 200px;
   height: 200px;
   padding: 10px;
-  border: 4px solid #F78CA2;
+  border: 4px solid #f78ca2;
   margin-bottom: 15%;
   display: flex;
   align-items: center;
@@ -41,11 +41,56 @@ html {
   display: block !important;
 }
 
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .app__content {
     display: block;
   }
 }
+.temple__leftSection{
+  width: 20%;
+}
+.temple__leftSection img{
+  width: 100px
+}
+.temple__rightSection{
+  width: 20%;
+}
+.temple__subheading {
+  width: 60%;
+  margin: auto;
+  font-size: 22px;
+  text-align: center;
+  padding: 20px;
+}
+.temple__subheading::before{
+  content: "";
+  width: 60px;
+  position: absolute;
+  background: url(/assets/heroSmallImage.jpg);
+  height: 100px;
+  background-size: contain;
+  margin-left: -100px;
+  background-repeat: no-repeat;
+  margin-top: -6px;
+}
 
+.search__box {
+  width: 20%;
+}
+.middle_section {
+  width: 60%;
+}
+
+.middle_sectionRow {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.middle_sectionColumn img {
+  vertical-align: middle;
+  width: 100%;
+}
