--- a/src/app.css
+++ b/src/app.css
@@ -94,3 +94,51 @@ html {
   vertical-align: middle;
   width: 100%;
 }
+
+
+/*Image fader */
+.image-fader {
+  width: 100%;
+  position: relative;
+}
+
+.image-fader img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  animation-name: imagefade;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 8s;
+}
+
+@keyframes imagefade {
+  0% {
+    opacity:1;
+  }
+  17% {
+    opacity:1;
+  }
+  25% {
+    opacity:0;
+  }
+  92% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+.image-fader img:nth-of-type(1) {
+  animation-delay: 6s;
+}
+.image-fader img:nth-of-type(2) {
+  animation-delay: 4s;
+}
+.image-fader img:nth-of-type(3) {
+  animation-delay: 2s;
+}
+.image-fader img:nth-of-type(4) {
+  animation-delay: 0;
+}
